# mini-world

./: Cargo.toml  DESIGN.md  README.md
crates/mw-agents/src/: dialogue.rs  habits.rs  lib.rs  memory.rs  obs.rs  soul.rs
crates/mw-core/src/: entity.rs
crates/mw-neural/: Cargo.toml
crates/mw-neural/src/: lib.rs
crates/mw-sim/: Cargo.toml
crates/mw-sim/src/: dialogue.rs  director.rs  lib.rs  main.rs  promotion.rs  soak.rs  trajectory.rs  view.rs
crates/mw-sim/tests/: dialogue_det.rs  dialogue_live.rs  fast_forward.rs  promotion.rs  view_smoke.rs
crates/mw-text/: Cargo.toml
crates/mw-text/src/: lib.rs  prompt.rs  queue.rs
crates/mw-text/tests/: live.rs
crates/mw-village/src/: action.rs  lib.rs  map.rs  needs.rs
crates/mw-village/tests/: pipeline.rs
docs/: experiment-log.md  paper-notes.md
scripts/: gpu-sync.sh
training/: .gitignore  pyproject.toml
training/artifacts/: fixtures.json  metrics.json  norm_stats.json  spark_consistency_report.json  spark_matched_expertise.manifest.json  spark_prompts.jsonl  spark_states.jsonl
training/artifacts/corrected-reference-1k/: aggregate.json
training/artifacts/expertise-validation/: preregistration.json  validation-summary.json
training/mw_training/: __init__.py  dataset.py  ladder.py  model.py  omni.py  spark_dataset.py  train.py  train_omni.py
training/scripts/: make_fixtures.py
training/tests/: test_ladder.py  test_matched_ladder.py  test_spark_dataset.py  test_training.py
