[package]
name = "mw-sim"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "mw-sim"
path = "src/main.rs"

[dependencies]
mw-core.workspace = true
mw-village = { path = "../mw-village" }
mw-agents = { path = "../mw-agents" }
mw-text = { path = "../mw-text" }
clap = { version = "4", features = ["derive"] }
