[package]
name = "mw-sim"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "mw-sim"
path = "src/main.rs"

[dependencies]
mw-core.workspace = true
mw-village = { path = "../mw-village" }
mw-agents = { path = "../mw-agents" }
mw-text = { path = "../mw-text" }
mw-neural = { path = "../mw-neural" }
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
# TUI debug viewer (mw-sim only): ratatui draws the panes, crossterm drives the
# terminal + input. TestBackend (in ratatui) powers the headless `--smoke` path.
ratatui = "0.29"
crossterm = "0.28"
